--- a/all/style/sinscrire.css
+++ b/all/style/sinscrire.css
@@ -189,6 +189,28 @@ p.info-text {
 
 
 
+.error-message{
+    color: red;
+    background-color: #ffe6e6;
+    border: 1px solid red;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-align: center;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+
+@keyframes fadeIn{
+    from {
+        opacity : 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
 
 /* Bouton d'inscription */
 .signup-button {
