--- a/all/style/voyage.css
+++ b/all/style/voyage.css
@@ -61,36 +61,45 @@ h3 {
 }
 
 
-
-.video-header {
+.banner {
     position: relative;
-    height: 85vh;
+    width: 100%;
+    height: 400px;
     overflow: hidden;
+    margin-top: 10px;
 }
 
-.background-video {
+
+.banner-image{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
     filter: brightness(0.6);
 }
 
-.video-overlay {
+
+.banner-overlay{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 20%;
+    left: 20%;
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding: 20px 30px;
-    border-radius: 15px;
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 700;
-    white-space: nowrap;
-    letter-spacing: 1px;
+    padding: 10px 15px;
+    border-radius: 5px;
 }
+
+
+.banner_overlay h1{
+    font-size: 3em;
+    margin: 0;
+}
+
+
+.banner-overlay p{
+    font-size: 1.5em;
+}
+
 
 
 .sidebar-summary {
