--- a/all/style/voyage.css
+++ b/all/style/voyage.css
@@ -61,44 +61,24 @@ h3 {
 }
 
 
-.banner {
+.hero-image {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
     position: relative;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    margin-top: 10px;
-}
-
-
-.banner-image{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    filter: brightness(0.6);
-}
-
-
-.banner-overlay{
+    margin-bottom: 40px;
+  }
+  
+  .hero-overlay {
     position: absolute;
-    bottom: 20%;
-    left: 20%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 10px 15px;
-    border-radius: 5px;
-}
-
-
-.banner_overlay h1{
-    font-size: 3em;
-    margin: 0;
-}
-
-
-.banner-overlay p{
-    font-size: 1.5em;
-}
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.3); /* Optionnel : pour foncer un peu l’image */
+  }
+  
 
 
 
@@ -609,3 +589,21 @@ footer {
         font-weight: 700;
         color: #ff4c4c !important;
     }
+
+
+    .hero-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        z-index: -1;
+        filter: brightness(1);
+        transition: filter 0.3s ease;
+      }
+      
+      body.scrolled .hero-background {
+        filter: brightness(0.5); /* assombrit quand on scrolle */
+      }
