--- a/all/style/voyage.css
+++ b/all/style/voyage.css
@@ -1,13 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Waterfall&display=swap');
+
+
+
+
+body {
+    position: relative;
+    z-index: 0;
+}
 
 
 header {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 10%;
     background: linear-gradient(#046ce4, #148aea, #1e99ef);
+    z-index: 10;
 }
+
+
+.page-content {
+    position: relative;
+    z-index: 1;
+    padding-top: 100vh;
+    background-color: transparent;
+}
+
+
 
 .logo {
     cursor: pointer;
@@ -439,19 +460,6 @@ h3 {
 
 
 
-.photo-credit {
-    font-size: 0.85rem;
-    color: #777;
-    text-align: center;
-}
-
-
-.photo-credit a{
-    color: #046ce4;
-    text-decoration: none;
-}
-
-
 .photo-credit a:hover {
     text-decoration: underline;
 }
@@ -543,10 +551,7 @@ footer {
 
 
 @media (max-width: 768px) {
-    .video-overlay {
-        font-size: 1.8rem;
-        padding: 15px;
-    }
+
 
     .passenger-form, .flight-info, .hotel-selection, .total-price {
         margin: 30px 15px;
@@ -590,20 +595,69 @@ footer {
         color: #ff4c4c !important;
     }
 
+    .hero-wrapper {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -1; /* met le fond derrière */
+    }
 
-    .hero-background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100%;
-        background-size: cover;
-        background-position: center;
-        z-index: -1;
-        filter: brightness(1);
-        transition: filter 0.3s ease;
-      }
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
       
-      body.scrolled .hero-background {
-        filter: brightness(0.5); /* assombrit quand on scrolle */
-      }
+    .hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+  }
+      
+  
+
+
+ .hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 2;
+    padding: 0 20px;
+  }
+  
+ 
+  
+  .hero-text h1 {
+    font-family: 'Waterfall', cursive;
+    font-size: 10vw;
+    font-weight: 700;
+    line-height: 1.1;
+    text-shadow: 2px 2px 12px rgba(0,0,0,0.6);
+    margin: 0;
+  }
+
+
+.hero-text p {
+    font-family: "Cormorant Garamound", serif;
+    font-size: 2vw;
+    font-weight: 400;
+    margin-top: 10px;
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.4);
+}
+
+    .page-content {        
+    position: relative;
+    z-index: 1;
+    padding-top: 100vh; /* pousse le contenu sous l’image */
+  }
