--- a/all/style/explorer.css
+++ b/all/style/explorer.css
@@ -345,6 +345,13 @@ footer {
     padding: 20px;
     background-color: #1e99ef;
     color: white;
+    flex-shrink: 0;          
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 0.9rem;
+    margin-top: auto;  
 }
 
 
