--- a/all/style/options.css
+++ b/all/style/options.css
@@ -82,6 +82,7 @@ h3 {
 }
 
 
+
 .hero-image {
     width: 100%;
     height: 100vh;
@@ -110,6 +111,7 @@ h3 {
     transform: translateY(-20px);
     pointer-events: none;
 }
+
 
 
 
@@ -155,6 +157,25 @@ h3 {
     border-radius: 8px;
     width: 100%;
 }
+
+
+.btn-tempo {
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    color: white;
+    padding: 12px 24px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 30px auto 0 auto;
+    display: block;
+  }
+  
+  .btn-tempo:hover {
+    background: linear-gradient(to right, #0083b0, #005f73);
+  }
 
 
 
@@ -495,6 +516,18 @@ h3 {
 .activity-date label{
     font-weight: bold;
 }
+
+
+.activity-date-input.flatpickr-input {
+    cursor: pointer;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 0.4em 0.6em;
+    border-radius: 5px;
+    font-family: inherit;
+    font-size: 1em;
+    width: 100%;
+  }
 
 
 .activity-option {
